show all product in customer

--- a/src/main/resources/templates/customers/index.html
+++ b/src/main/resources/templates/customers/index.html
@@ -42,8 +42,8 @@
             <div class="col-lg-8 col-md-8">
                 <ul class="filter__controls">
                     <li class="active" data-filter="*">All</li>
-                    <li data-filter=".smartphone">Smartphone</li>
-                    <li data-filter=".tablet">Tablet</li>
+                    <li data-filter=".smartphone">Brand</li>
+                    <li data-filter=".tablet">Category</li>
                 </ul>
             </div>
         </div>
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12" style="text-align: center;">
-                <a href="./shop" class="site-btn btn">See All Product</a>
+                <a th:href="@{/shop}" class="site-btn btn">See All Product</a>
             </div>
         </div>
     </div>
