--- a/src/main/resources/templates/customers/fragments/header.html
+++ b/src/main/resources/templates/customers/fragments/header.html
@@ -91,7 +91,7 @@
                                 <li><a href="./wishlist"><span class="icon_heart_alt"></span>
                                         <div class="tip" id="wishlistTip">2</div>
                                     </a></li>
-                                <li><a href="./cart"><span class="icon_bag_alt"></span>
+                                <li><a id="cart" href=""><span class="icon_bag_alt"></span>
                                         <div class="tip" id="cartTip">2</div>
                                     </a></li>
                                 <li>
@@ -148,15 +148,22 @@
         <script th:src="@{/js/main.js}"></script>
         <script>
             var token = localStorage.getItem('token');
+            var id = localStorage.getItem('iduser');
             if (token !== null) {
                 document.getElementById("loginBtn").style.display = "none";
                 document.getElementById("loginBtnSide").style.display = "none";
                 document.getElementById("logoutBtn").style.display = "block";
+                var cartButton = document.getElementById("cart");
+                cartButton.setAttribute("href", `./cart`);
+                
             } else {
                 document.getElementById("loginBtn").style.display = "block";
                 document.getElementById("loginBtnSide").style.display = "block";
                 document.getElementById("logoutBtn").style.display = "none";
+                var cartButton = document.getElementById("cart");
+                cartButton.setAttribute("href", "./login");
             }
+
 
             function logout() {
                 localStorage.removeItem("token");
